Added google tracking

--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2BKWZZZLHN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2BKWZZZLHN');
+</script>
 <body>
     <div class="container">
         <header>
