--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <a href="https://sites.google.com/view/lifemaxxprivacypolicy/home" target="_blank">Privacy</a>
         </div>
         <div class="social-links">
-            <a href="https://x.com/lifemaxxapp" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/Lifemaxx_app" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.instagram.com/lifemaxx.app/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@lifemaxapp" target="_blank"><i class="fab fa-tiktok"></i></a>
         </div>
