--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             margin: 0 auto;
             padding: 0 20px;
             flex: 1;
+            padding-top: 70px;
             display: flex;
             flex-direction: column;
             justify-content: center;
